--- a/_config.yml
+++ b/_config.yml
@@ -3,13 +3,13 @@
 #
 
 # Name of your site (displayed in the header)
-name: Your Name
+name: Jussi Isotalo
 
 # Short bio or description (displayed in the header)
-description: Web Developer from Somewhere
+description: Automation Engineer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars.githubusercontent.com/u/13457157?s=400&u=6103964aa2bf6e70ed7279d70c40313ef69db6ab&v=4
 
 #
 # Flags below are optional
@@ -21,7 +21,7 @@ footer-links:
   email:
   facebook:
   flickr:
-  github: barryclark/jekyll-now
+  github: jisotalo
   instagram:
   linkedin:
   pinterest:
