--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Jussi Isotalo
 
 # Short bio or description (displayed in the header)
-description: Automation Engineer
+description: Automation Engineer and Programmer, Finland
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars.githubusercontent.com/u/13457157?s=400&u=6103964aa2bf6e70ed7279d70c40313ef69db6ab&v=4
