--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ footer-links:
   flickr:
   github: jisotalo
   instagram:
-  linkedin:
+  linkedin: www.linkedin.com/in/jussi-isotalo
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter:
